test/syntax/pass/causality/0.sync
let node acc x = y where
  rec y = 0 fby (y + x)
