test/syntax/fail/duplicate_parameter.sync
let node f (x : int) (x : int) = x
